Updates from Overleaf

--- a/Development_report.tex
+++ b/Development_report.tex
@@ -142,22 +142,37 @@ Figure 1 supports the idea that as countries become more developed, they rely le
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.75\linewidth]{Reproducibility Package/Variable Graphs/Developed New.png}
-    \caption{All Data sets of GDP per Capita with Manufacturing Employment}
-    \label{fig:enter-label}
+    \caption{Average Data Points of Developed Countries}
+    \label{fig:Developed-label}
 \end{figure}
 
-Similarly, figure 2 shows a dense concentration of developing countries with manufacturing employment between 0 and 20 percent and GDP per capita below 50,000 USD due to the threshold of 20,000 USD. This suggests that while manufacturing plays a significant role in these economies, it is insufficient to drive substantial GDP growth, as there is no clear positive or negative correlation between the two variables. Most countries have low GDP per capita values, regardless of their manufacturing employment levels.
+Similarly, figure 2 shows a dense concentration of developing countries with manufacturing employment between 0 and 20 percent and GDP per capita below 50,000 USD due to the threshold of 20,000 USD. This suggests that while manufacturing plays a significant role in these economies, it is insufficient to drive substantial GDP growth, as there is no clear positive or negative correlation between the two variables. 
+Most countries have low GDP per capita values, regardless of their manufacturing employment levels.
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.75\linewidth]{Reproducibility Package/Variable Graphs/Developing Final (better view).png}
+    \caption{Average Data Points of Developing Countries}
+    \label{fig:Developing-label}
+\end{figure}
 
 \section{Discussion}
 \label{sec:discussion}
 
     Our findings highlight the relationship between manufacturing employment and GDP per capita, emphasizing the roles manufacturing plays in developed and developing economies. The results support structural transformation theories, suggesting that economies transition from reliance on manufacturing to service-oriented sectors as they develop. However, the differences observed between developed and developing countries have critical implications for policymakers and future research.
-    In developing countries, we observed a positive correlation between manufacturing employment and GDP per capita. This goes to show the role of industrialization in early stages of economic growth. Developing countries rely heavily on labor-intensive manufacturing sectors to drive economic expansion, leveraging their abundant, low-cost labor forces. Moreover, the strong regression coefficient observed in our analysis highlights the potential of increasing manufacturing employment shares in these economies. For policymakers in developing nations, this indicates that fostering industrialization and supporting manufacturing sectors through investments in infrastructure, technology, and workforce development remains vital to achieving sustainable economic growth. On the other hand, in developed countries, we found a negative correlation between manufacturing employment and GDP per capita. This reflects the observed shift toward service-oriented and knowledge-driven economies in these nations. The decline in manufacturing employment shares, combined with sustained GDP growth, reflects the increased productivity of advanced manufacturing and the rising dominance of sectors such as technology, finance, and healthcare. For developed nations, this suggests that policies should prioritize fostering innovation, enhancing productivity in high-tech manufacturing, and investing in the service sector to sustain economic growth. 
+    
+    In developing countries, we observed a positive correlation between manufacturing employment and GDP per capita. This goes to show the role of industrialization in early stages of economic growth. Developing countries rely heavily on labor-intensive manufacturing sectors to drive economic expansion, leveraging their abundant, low-cost labor forces. Moreover, the strong regression coefficient observed in our analysis highlights the potential of increasing manufacturing employment shares in these economies. For policymakers in developing nations, this indicates that fostering industrialization and supporting manufacturing sectors through investments in infrastructure, technology, and workforce development remains vital to achieving sustainable economic growth. 
+    
+    On the other hand, in developed countries, we found a negative correlation between manufacturing employment and GDP per capita. This reflects the observed shift toward service-oriented and knowledge-driven economies in these nations. The decline in manufacturing employment shares, combined with sustained GDP growth, reflects the increased productivity of advanced manufacturing and the rising dominance of sectors such as technology, finance, and healthcare. For developed nations, this suggests that policies should prioritize fostering innovation, enhancing productivity in high-tech manufacturing, and investing in the service sector to sustain economic growth. 
+   
     Our analysis is subject to several limitations that require consideration. First, globally averaged data may obscure regional or country-specific variations that could provide further insights. For instance, some developing nations might experience unique trajectories due to differences in resources, governance, or integration into global trade networks. Similarly, the varying availability of data across countries and years may introduce inconsistencies, particularly in developing countries where data gaps are more prevalent. Addressing these gaps in future research by leveraging more granular data could enhance the robustness of the findings.
+    
     Second, while the distinction between developed and developing countries based on GDP per capita provides a valuable framework, it does not account for other factors that influence economic structures, such as institutional quality or access to global markets. Future studies could incorporate additional variables, such as trade openness, education levels, or technological adoption, to better understand the drivers of manufacturing's impact on economic growth.
+   
     Lastly, excluding data post-2019 to avoid the confounding effects of the COVID-19 pandemic, while necessary, limits the ability to assess how global crises impact the manufacturing-GDP relationship. Future research could explore how external shocks, such as pandemics, reshape the role of manufacturing in both developed and developing economies.
+   
     Our findings carry important policy implications. For developing nations, strategies to strengthen manufacturing sectors can lead to economic growth and facilitate structural transformation. Investments in industrial policies and trade agreements that promote manufacturing exports are particularly critical. For developed countries, the focus should shift to fostering innovation in advanced manufacturing while embracing the growth of service-oriented sectors. Additionally, understanding the long-term implications of these transitions for labor markets and income inequality remains an essential area for further investigation. To further analyze the effects of manufacturing, we can observe the cyclical structure of economies, as even in highly serviced markets, it is essential to keep the primary sector running, especially agriculture. 
+   
     In conclusion, our analysis demonstrates manufacturing employment's pivotal but evolving role in economic development. While developing countries benefit significantly from industrialization, developed nations exemplify the transition toward service-based economies. These findings underscore the importance of tailored economic policies that reflect a country's stage of development and structural characteristics. By addressing the limitations identified and expanding the scope of future research, we can deepen our understanding of the manufacturing-GDP relationship and its implications for sustainable economic growth.
 
 
